--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
   <section id="about" class="py-16 bg-white px-4">
     <div class="container mx-auto" data-aos="fade-right">
       <h2 class="text-3xl font-bold mb-6">About Us</h2>
-      <p>SHE CARE – Sree Alagar Enterprises is a leading provider of customized garment solutions tailored to your business or personal needs. From uniforms to branded apparel, we combine quality with creativity and timely delivery.</p>
+      <p>SHE CARE – Sree Alagar Enterprises is your go-to for custom-made garments designed to fit exactly what you need—whether it’s stylish uniforms, branded clothing, or everyday wear. We mix quality craftsmanship with smart design and a close eye for detail to make sure every piece truly represents your brand. We're all about getting your order right and on time, with friendly, personalized service along the way. From your first idea to the final product, you can count on us for clothes that are comfortable, durable, and look great.
+</p>
     </div>
   </section>
 
