--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
   </nav>
 
   <!-- Hero Section -->
-<section class="pt-32 bg-green-50 text-center px-4">
+<section class="pt-36 md:pt-40 bg-green-50 text-center px-4 min-h-screen flex items-center">
   <div class="container mx-auto" data-aos="fade-up">
     <h1 class="text-4xl md:text-5xl font-bold mb-4">Your Trusted Garment Partner</h1>
     <p class="text-lg md:text-xl mb-6">Delivering quality, customized garments for every need.</p>
     <a href="#contact" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition">Get in Touch</a>
   </div>
 </section>
+
 
 
   <!-- About Section -->
