--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en" class="scroll-smooth">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SHE CARE – Sree Alagar Enterprises</title>
-
-  <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
-  <!-- AOS CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <!-- Lightbox CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet" />
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
   <style>
     .logo-circle {
       width: 60px;
@@ -27,7 +22,7 @@
     }
   </style>
 </head>
-<body class="bg-white text-gray-800 flex flex-col min-h-screen">
+<body class="bg-white text-gray-800">
 
   <!-- Navbar -->
   <nav class="bg-white shadow fixed w-full z-10">
@@ -44,30 +39,31 @@
       <div class="flex flex-wrap items-center space-x-4">
         <a href="#about" class="hover:text-green-600 transition text-sm md:text-base">About</a>
         <a href="#services" class="hover:text-green-600 transition text-sm md:text-base">Services</a>
-        <a href="#gallery" class="hover:text-green-600 transition text-sm md:text-base">Gallery</a>
         <a href="#contact" class="hover:text-green-600 transition text-sm md:text-base">Contact</a>
         <button onclick="document.getElementById('enquiry').scrollIntoView({behavior: 'smooth'})"
           class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition text-sm md:text-base">Enquiry</button>
+        <!-- Removed dark mode button -->
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section class="pt-36 md:pt-40 bg-green-50 text-center px-4 min-h-screen flex items-center">
-    <div class="container mx-auto" data-aos="fade-up">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Your Trusted Garment Partner</h1>
-      <p class="text-lg md:text-xl mb-6">Delivering quality, customized garments for every need.</p>
-      <a href="#contact" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition">Get in Touch</a>
-    </div>
-  </section>
+<section class="pt-36 md:pt-40 bg-green-50 text-center px-4 min-h-screen flex items-center">
+  <div class="container mx-auto" data-aos="fade-up">
+    <h1 class="text-4xl md:text-5xl font-bold mb-4">Your Trusted Garment Partner</h1>
+    <p class="text-lg md:text-xl mb-6">Delivering quality, customized garments for every need.</p>
+    <a href="#contact" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition">Get in Touch</a>
+  </div>
+</section>
+
+
 
   <!-- About Section -->
   <section id="about" class="py-16 bg-white px-4">
     <div class="container mx-auto" data-aos="fade-right">
       <h2 class="text-3xl font-bold mb-6">About Us</h2>
-      <p>
-        SHE CARE – Sree Alagar Enterprises is your go-to for custom-made garments designed to fit exactly what you need—whether it’s stylish uniforms, branded clothing, or everyday wear. We mix quality craftsmanship with smart design and a close eye for detail to make sure every piece truly represents your brand. We're all about getting your order right and on time, with friendly, personalized service along the way. From your first idea to the final product, you can count on us for clothes that are comfortable, durable, and look great.
-      </p>
+      <p>SHE CARE – Sree Alagar Enterprises is your go-to for custom-made garments designed to fit exactly what you need—whether it’s stylish uniforms, branded clothing, or everyday wear. We mix quality craftsmanship with smart design and a close eye for detail to make sure every piece truly represents your brand. We're all about getting your order right and on time, with friendly, personalized service along the way. From your first idea to the final product, you can count on us for clothes that are comfortable, durable, and look great.
+</p>
     </div>
   </section>
 
@@ -84,52 +80,19 @@
     </div>
   </section>
 
-  <!-- Gallery Section -->
-  <section id="gallery" class="py-16 bg-white px-4">
-    <div class="container mx-auto" data-aos="fade-up">
-      <h2 class="text-3xl font-bold mb-6 text-center">Our Work Gallery</h2>
-      <p class="text-center mb-8 text-gray-600">Take a look at some of the uniforms and custom apparel we’ve crafted for happy clients.</p>
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-        <a href="images/gallery1.jpg" data-lightbox="shecare-gallery" data-title="Uniform Project 1">
-          <img src="images/gallery1.jpg" alt="Uniform 1" class="w-full h-64 object-cover rounded shadow hover:shadow-lg transition" />
-        </a>
-        <a href="images/gallery2.jpg" data-lightbox="shecare-gallery" data-title="Uniform Project 2">
-          <img src="images/gallery2.jpg" alt="Uniform 2" class="w-full h-64 object-cover rounded shadow hover:shadow-lg transition" />
-        </a>
-        <a href="images/gallery3.jpg" data-lightbox="shecare-gallery" data-title="Uniform Project 3">
-          <img src="images/gallery3.jpg" alt="Uniform 3" class="w-full h-64 object-cover rounded shadow hover:shadow-lg transition" />
-        </a>
-        <a href="images/gallery4.jpg" data-lightbox="shecare-gallery" data-title="Uniform Project 4">
-          <img src="images/gallery4.jpg" alt="Uniform 4" class="w-full h-64 object-cover rounded shadow hover:shadow-lg transition" />
-        </a>
-        <a href="images/gallery5.jpg" data-lightbox="shecare-gallery" data-title="Uniform Project 5">
-          <img src="images/gallery5.jpg" alt="Uniform 5" class="w-full h-64 object-cover rounded shadow hover:shadow-lg transition" />
-        </a>
-        <a href="images/gallery6.jpg" data-lightbox="shecare-gallery" data-title="Uniform Project 6">
-          <img src="images/gallery6.jpg" alt="Uniform 6" class="w-full h-64 object-cover rounded shadow hover:shadow-lg transition" />
-        </a>
-      </div>
-    </div>
-  </section>
-
   <!-- Contact Section -->
   <section id="contact" class="py-16 bg-white px-4">
     <div class="container mx-auto" data-aos="fade-up">
       <h2 class="text-3xl font-bold mb-6">Contact Us</h2>
       <p class="mb-4 font-semibold text-lg">DM US OR CALL</p>
-      <p class="mb-2">
-        <a href="tel:9442190903" class="text-green-600 hover:underline">94421 90903</a> | 
-        <a href="tel:8825498421" class="text-green-600 hover:underline">88254 98421</a>
-      </p>
-      <p class="mb-4">
-        Email: <a href="mailto:shecare2011@gmail.com" class="text-blue-500 hover:underline">shecare2011@gmail.com</a>
-      </p>
+      <p class="mb-2"><a href="tel:9442190903" class="text-green-600 hover:underline">94421 90903</a> | <a href="tel:8825498421" class="text-green-600 hover:underline">88254 98421</a></p>
+      <p class="mb-4">Email: <a href="mailto:shecare2011@gmail.com" class="text-blue-500 hover:underline">shecare2011@gmail.com</a></p>
       <p class="mb-4">Based in:</p>
-      <p>GROUND FLOOR, NO.19/20 KEELS,<br />CHATIRAM ROAD (TAHSILDAR LANE),<br />THENNUR, TRICHY-620017</p>
+      <p class="mb-4">GROUND FLOOR, NO.19/20 KEELS,<br />CHATIRAM ROAD (TAHSILDAR LANE),<br />THENNUR, TRICHY-620017</p>
     </div>
   </section>
 
-  <!-- Enquiry Form Section -->
+  <!-- Enquiry Form -->
   <section id="enquiry" class="py-16 bg-gray-50 px-4">
     <div class="max-w-3xl mx-auto bg-white p-8 shadow-lg rounded" data-aos="zoom-in">
       <h2 class="text-3xl font-bold mb-6 text-center">Garment Enquiry Form</h2>
@@ -141,7 +104,7 @@
         <input type="text" name="Full Name" placeholder="Full Name" required class="w-full border p-2 rounded" />
         <input type="text" name="Contact Info" placeholder="Email or Phone" required class="w-full border p-2 rounded" />
 
-        <label class="block font-semibold mt-4">Garment Type:</label>
+        <label class="block font-semibold">Garment Type:</label>
         <div class="grid grid-cols-2 gap-2">
           <label><input type="checkbox" name="Garment Type[]" value="T-Shirts" /> T-Shirts</label>
           <label><input type="checkbox" name="Garment Type[]" value="Polo Shirts" /> Polo Shirts</label>
@@ -153,7 +116,7 @@
           <input type="text" name="Garment Type Other" placeholder="Others (specify)" class="w-full border p-2 rounded col-span-2" />
         </div>
 
-        <label class="block font-semibold mt-4">Purpose:</label>
+        <label class="block font-semibold">Purpose:</label>
         <select name="Purpose" class="w-full border p-2 rounded">
           <option>Corporate</option>
           <option>Retail</option>
@@ -165,7 +128,7 @@
 
         <textarea name="Quantity and Sizes" rows="3" placeholder="Quantity & Sizes (e.g. 100 pcs – 40 M, 30 L, 30 XL)" class="w-full border p-2 rounded"></textarea>
 
-        <label class="block font-semibold mt-4">Fabric Preferences:</label>
+        <label class="block font-semibold">Fabric Preferences:</label>
         <div class="grid grid-cols-2 gap-2">
           <label><input type="checkbox" name="Fabric[]" value="Cotton" /> Cotton</label>
           <label><input type="checkbox" name="Fabric[]" value="Polyester" /> Polyester</label>
@@ -174,7 +137,7 @@
           <label><input type="checkbox" name="Fabric[]" value="No Preference" /> No Preference</label>
         </div>
 
-        <label class="block font-semibold mt-4">Customization:</label>
+        <label class="block font-semibold">Customization:</label>
         <div class="grid grid-cols-2 gap-2">
           <label><input type="checkbox" name="Customization[]" value="Embroidery" /> Embroidery</label>
           <label><input type="checkbox" name="Customization[]" value="Screen Print" /> Screen Print</label>
@@ -182,31 +145,23 @@
           <label><input type="checkbox" name="Customization[]" value="None" /> None</label>
         </div>
 
-        <label class="block mt-4">Upload Design/Logo:</label>
+        <label class="block mt-2">Upload Design/Logo:</label>
         <input type="file" name="Design Upload" class="w-full border p-2 rounded" />
 
-        <input type="text" name="Preferred Colors" placeholder="Preferred Colors" class="w-full border p-2 rounded mt-4" />
-        <textarea name="Delivery Info" rows="3" placeholder="Expected Delivery Date & Location" class="w-full border p-2 rounded mt-4"></textarea>
+        <input type="text" name="Preferred Colors" placeholder="Preferred Colors" class="w-full border p-2 rounded" />
+        <textarea name="Delivery Info" rows="3" placeholder="Expected Delivery Date & Location" class="w-full border p-2 rounded"></textarea>
 
-        <button type="submit" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition w-full mt-6">Submit Enquiry</button>
+        <button type="submit" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition w-full">Submit Enquiry</button>
       </form>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-green-600 text-white text-center py-6 mt-auto">
-    &copy; 2025 SHE CARE – Sree Alagar Enterprises. All rights reserved.
-  </footer>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      // Initialize AOS after DOM is ready
+      AOS.init();
+    });
+  </script>
 
- <!-- Scripts -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoa if (typeof AOS ded', () => {
-   !== 'undefined') {
-      AOS.init({ duration: 800, once: true });
-    }
-  });
-</script>
 </body>
 </html>
