--- a/index.html
+++ b/index.html
@@ -42,28 +42,24 @@
         <a href="#contact" class="hover:text-green-600 transition text-sm md:text-base">Contact</a>
         <button onclick="document.getElementById('enquiry').scrollIntoView({behavior: 'smooth'})"
           class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition text-sm md:text-base">Enquiry</button>
-        <!-- Removed dark mode button -->
       </div>
     </div>
   </nav>
 
   <!-- Hero Section -->
-<section class="pt-36 md:pt-40 bg-green-50 text-center px-4 min-h-screen flex items-center">
-  <div class="container mx-auto" data-aos="fade-up">
-    <h1 class="text-4xl md:text-5xl font-bold mb-4">Your Trusted Garment Partner</h1>
-    <p class="text-lg md:text-xl mb-6">Delivering quality, customized garments for every need.</p>
-    <a href="#contact" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition">Get in Touch</a>
-  </div>
-</section>
-
-
+  <section class="pt-36 md:pt-40 bg-green-50 text-center px-4 min-h-screen flex items-center">
+    <div class="container mx-auto" data-aos="fade-up">
+      <h1 class="text-4xl md:text-5xl font-bold mb-4">Your Trusted Garment Partner</h1>
+      <p class="text-lg md:text-xl mb-6">Delivering quality, customized garments for every need.</p>
+      <a href="#contact" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 transition">Get in Touch</a>
+    </div>
+  </section>
 
   <!-- About Section -->
   <section id="about" class="py-16 bg-white px-4">
     <div class="container mx-auto" data-aos="fade-right">
       <h2 class="text-3xl font-bold mb-6">About Us</h2>
-      <p>SHE CARE – Sree Alagar Enterprises is your go-to for custom-made garments designed to fit exactly what you need—whether it’s stylish uniforms, branded clothing, or everyday wear. We mix quality craftsmanship with smart design and a close eye for detail to make sure every piece truly represents your brand. We're all about getting your order right and on time, with friendly, personalized service along the way. From your first idea to the final product, you can count on us for clothes that are comfortable, durable, and look great.
-</p>
+      <p>SHE CARE – Sree Alagar Enterprises is your go-to for custom-made garments designed to fit exactly what you need—whether it’s stylish uniforms, branded clothing, or everyday wear. We mix quality craftsmanship with smart design and a close eye for detail to make sure every piece truly represents your brand. We're all about getting your order right and on time, with friendly, personalized service along the way. From your first idea to the final product, you can count on us for clothes that are comfortable, durable, and look great.</p>
     </div>
   </section>
 
@@ -92,6 +88,19 @@
     </div>
   </section>
 
+  <!-- Gallery Section -->
+  <section class="py-16 bg-gray-100 px-4">
+    <div class="container mx-auto" data-aos="fade-up">
+      <h2 class="text-3xl font-bold mb-6 text-center">Our Work Gallery</h2>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <img src="gallery1.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover rounded shadow" />
+        <img src="gallery2.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover rounded shadow" />
+        <img src="gallery3.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
+        <!-- Add more images as needed -->
+      </div>
+    </div>
+  </section>
+
   <!-- Enquiry Form -->
   <section id="enquiry" class="py-16 bg-gray-50 px-4">
     <div class="max-w-3xl mx-auto bg-white p-8 shadow-lg rounded" data-aos="zoom-in">
@@ -100,7 +109,6 @@
         <input type="hidden" name="_subject" value="New Garment Enquiry" />
         <input type="hidden" name="_captcha" value="false" />
         <input type="hidden" name="_template" value="box" />
-
         <input type="text" name="Full Name" placeholder="Full Name" required class="w-full border p-2 rounded" />
         <input type="text" name="Contact Info" placeholder="Email or Phone" required class="w-full border p-2 rounded" />
 
@@ -156,12 +164,17 @@
     </div>
   </section>
 
+  <!-- Footer -->
+  <footer class="bg-green-600 text-white py-6 mt-12">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2025 SHE CARE – Sree Alagar Enterprises. All rights reserved.</p>
+    </div>
+  </footer>
+
   <script>
     document.addEventListener('DOMContentLoaded', () => {
-      // Initialize AOS after DOM is ready
       AOS.init();
     });
   </script>
-
 </body>
 </html>
