--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <img src="gallery1.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover rounded shadow" />
         <img src="gallery2.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover rounded shadow" />
         <img src="gallery3.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
+        <img src="gallery4.jpg" alt="Gallery Image 4" class="w-full h-60 object-cover rounded shadow" />
         <!-- Add more images as needed -->
       </div>
     </div>
