--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       <h2 class="text-3xl font-bold mb-6 text-center">Our Work Gallery</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
         <img src="gallery1.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover rounded shadow" />
-        <img src="gallery2.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover rounded shadow" />
-        <img src="gallery3.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
+        <img src="gallery2..jpg" alt="Gallery Image 2" class="w-full h-60 object-cover rounded shadow" />
+        <img src="gallery3..jpg" alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
         <img src="gallery4.jpg" alt="Gallery Image 4" class="w-full h-60 object-cover rounded shadow" />
         <!-- Add more images as needed -->
       </div>
