--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container mx-auto px-4 py-4 flex flex-wrap justify-between items-center">
       <div class="flex items-center space-x-3 mb-2 md:mb-0">
         <div class="logo-circle">
-          <img src="logo.jpg" alt="SHE CARE Logo" />
+          <img src="logo..jpg" alt="SHE CARE Logo" />
         </div>
         <div>
           <div class="text-xl md:text-2xl font-bold text-green-600">SHE CARE</div>
