--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
       <img src="gallery1.jpg" alt="Gallery Image 1" class="w-full h-60 object-cover rounded shadow" />
       <img src="gallery2.jpg" alt="Gallery Image 2" class="w-full h-60 object-cover rounded shadow" />
-      <img src="gallery3.jpg" alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
-      <img src="gallery4.jpg" alt="Gallery Image 4" class="w-full h-60 object-cover rounded shadow" />
+      <img src="gallery3..jpg" alt="Gallery Image 3" class="w-full h-60 object-cover rounded shadow" />
+      <img src="gallery4..jpg" alt="Gallery Image 4" class="w-full h-60 object-cover rounded shadow" />
     </div>
   </div>
 </section>
