--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <section id="catalogue" class="max-w-5xl mx-auto px-4 py-16">
   <h2 class="text-3xl font-semibold mb-6 text-center">Product Catalogue</h2>
   <div class="w-full h-[80vh] shadow rounded overflow-hidden">
-    <iframe src="catalogue.pdf" class="w-full h-full" frameborder="0" allowfullscreen loading="lazy" title="Catalogue PDF"></iframe>
+    <iframe src="Catalogue.pdf" class="w-full h-full" frameborder="0" allowfullscreen loading="lazy" title="Catalogue PDF"></iframe>
   </div>
   <div class="text-center mt-4">
     <a href="catalogue.pdf" download class="text-white bg-green-600 px-6 py-2 rounded hover:bg-green-700 inline-block">Download PDF</a>
